syntax = "proto3";

package data;

option go_package = "./;data";

// Message to represent job ready for next run
message ReadyJob {
	string JobName = 1;
	string Command = 2;
	string Machine = 3;
	string OutFile = 4;
	string ErrFile = 5;
}

// Request message to get list of jobs for next run
message NextJobsReq {}

// Response message with list of jobs
message NextJobsRes {
	repeated ReadyJob JobList = 1;
}

// Service to handle get jobs for next run
service NextJobs {
	rpc Next(NextJobsReq) returns (NextJobsRes) {}
}